ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "grafana.raghu-devops.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pmstack-grafana
                port:
                  number: 80
    - host: "prometheus.raghu-devops.online"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pmstack-kube-prometheus-st-prometheus
                port:
                  number: 9090

##the above thing will work with only when we install ingress-nginx in our workstation just "kind" will be changed
## and the host name is our choice so dnt get panic
